...
                .fillMaxWidth()
                .padding(spacing.spaceMedium)
                .padding(end = spacing.spaceMedium)  // to leave space for the search icon
                .onFocusChanged { focusState ->
                    onFocusChanged(focusState)
                }
                .testTag("search_text_field") // must use this "test code" here because there is no other way to tag this component
        )

        if(shouldShowHint) {
            Text(
                text = hint,
                style = MaterialTheme.typography.h4,
...
